@@ -1,2 +1,0 @@
-current NH3_Plasma_10s
-END
